@@ -1,5 +1,9 @@
 # vim: set noexpandtab:
 
+2013-04-04 Matt
+	* Added filtering flag m_filter
+	* Added toggle in NtMaker to filter
+	
 2013-03-13 Steve
 	* Tagging SusyCommon-00-00-66
 
